--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
                             <img class="img-responsive img-circle" src="http://placehold.it/150x150" alt="User">
                         </div>
                         <h2>Diogo Cunha</h2>
-                        <p class="lead">Lead Designer</p>
+                        <p class="lead">Developer</p>
                     </figure>
                 </div>
                 <div class="col-md-3 text-center">
