--- a/app/index.html
+++ b/app/index.html
@@ -200,7 +200,7 @@
                             <img class="img-responsive img-circle" src="images/diffcunha.jpg" alt="User" width="300">
                         </div>
                         <h2>Diogo Cunha</h2>
-                        <p class="lead">Developer <br>
+                        <p class="lead">
                             <a href="https://twitter.com/diffcunha">@diffcunha</a>
                         </p>
                         <p class="lead"></p>
@@ -213,7 +213,7 @@
                             <img class="img-responsive img-circle" src="images/pierreozoux.jpg" alt="User" width="300">
                         </div>
                         <h2>Pierre Ozoux</h2>
-                        <p class="lead">Developer <br>
+                        <p class="lead">
                             <a href="https://twitter.com/pierreozoux">@pierreozoux</a>
                         </p>
                     </figure>
